Update privacy policy contact email and add missing newline at end of file

--- a/public/pages/privacy.html
+++ b/public/pages/privacy.html
@@ -33,7 +33,7 @@
   </section>
   <section>
     <h2>5. Contact</h2>
-    <p>For privacy-related inquiries, please contact the administrator at <a href="mailto:ipowe27@wgu.edu">ipowe27@wgu.edu</a>.</p>
+    <p>For privacy-related inquiries, please contact the administrator at <a href="mailto:gary_goldbutt@medic8d.rest">gary_goldbutt@medic8d.rest</a>.</p>
   </section>
   <footer>
     <p>&copy; 2025 GPT Site. All rights reserved.</p>
